Kubernetes/Assignment-05/blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: old-version-deploy
  name: old-version-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: old-version-deploy
  template:
    metadata:
      labels:
        app: old-version-deploy
    spec:
      containers:
      - image: nginx:1.25.1
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: nginx-volume
        resources: {}
      volumes:
      - name: nginx-volume
        configMap:
          name: nginx-html-config
          items:
            - key: blue-index.html
              path: index.html
    
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-svc
  name: blue-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: old-version-deploy
  type: ClusterIP
