Kubernetes/Assignment-05/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-green-svc
  name: blue-green-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: new-version-deploy
  type: ClusterIP
